forge/mcp/logs/client_compile.log
src\minecraft\mod\legendaire45\entity\mobs\EntityCheval.java:30: error: unmappable character for encoding UTF-8
    int tempsSaut; //d?claration de notre fonction pour le temps entre deux saut
                      ^
src\minecraft\mod\legendaire45\entity\mobs\EntityCheval.java:109: error: unmappable character for encoding UTF-8
				motionY += 0.1; //Permet de r?gler la hauteur du saut !
				                             ^
src\minecraft\mod\legendaire45\entity\mobs\EntityCheval.java:124: error: unmappable character for encoding UTF-8
			EntityPlayer entityPlayer = (EntityPlayer) riddenByEntity; //fonctions diverses am?liorant le maniabilit? du mob
			                                                                                  ^
src\minecraft\mod\legendaire45\entity\mobs\EntityCheval.java:124: error: unmappable character for encoding UTF-8
			EntityPlayer entityPlayer = (EntityPlayer) riddenByEntity; //fonctions diverses am?liorant le maniabilit? du mob
			                                                                                                        ^
src\minecraft\mod\legendaire45\entity\mobs\EntityCheval.java:145: error: unmappable character for encoding UTF-8
				motionX += riddenByEntity.motionX * 8.5D; //vitesse du mob, changez ? votre guise
				                                                                    ^
5 errors
